--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# elm-package generated files
-elm-stuff
-# elm-repl generated files
+node_modules/
+elm-stuff/
+tests/elm-stuff/
 repl-temp-*
+dist/
+.directory
